# replay-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/replay/: __init__.py  config.py  types.py
src/replay/cli/: __init__.py  ls.py  show.py  ui.py
src/replay/core/: circuit_breaker.py  context.py  decorator.py  factory.py  recorder.py  session.py
src/replay/integrations/: crewai.py  langchain.py  langgraph.py  openai_agents.py  raw.py
src/replay/integrations/sdk_patches/: __init__.py  anthropic_patch.py  openai_patch.py
src/replay/otel/: __init__.py  receiver.py  span_mapper.py
src/replay/storage/: duckdb_repo.py  reader.py  repository.py
src/replay/strategies/: cost.py  redaction.py
src/replay/ui/: __init__.py  server.py
tests/: conftest.py
tests/integration/: test_duckdb_repo.py
tests/unit/: test_anthropic_patch.py  test_circuit_breaker.py  test_cost.py  test_decorator.py  test_openai_patch.py  test_otel_receiver.py  test_public_api.py  test_reader.py  test_recorder.py  test_redaction.py  test_types.py
