[project]
name = "replay-agent"
version = "0.1.0"
description = "Time-travel debugger for AI agents. Record every step, scrub back, fork, compare."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ai", "agents", "debugging", "observability", "tracing"]
dependencies = [
    "anyio>=4.0.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "anyio[trio]>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
replay = "replay.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/replay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: marks tests that require DuckDB on disk (deselect with -m 'not integration')"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "anyio[trio]>=4.0.0",
]
