[project]
name = "replay-agent"
version = "0.1.0"
description = "Time-travel debugger for AI agents. Record every step, scrub back, fork, compare."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Devashish Jadhav" }]
keywords = ["ai", "agents", "debugging", "observability", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anyio>=4.0.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/ddevilz/replay-agent"
Repository = "https://github.com/ddevilz/replay-agent"

[project.optional-dependencies]
ui = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
otel = ["opentelemetry-sdk>=1.20.0", "opentelemetry-proto>=1.20.0"]

[project.scripts]
replay = "replay.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/replay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
anyio_backends = ["asyncio"]
testpaths = ["tests"]
markers = ["integration: marks tests that require DuckDB on disk (deselect with -m 'not integration')"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

# uv-native dev dependency group — use `uv sync --dev` to install
[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "anyio[trio]>=4.0.0",
    "ruff>=0.1.0",
]
